test/language/line-terminators/invalid-regexp-ps.js
// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: sec-line-terminators
description: >
    7.3 - ES5 recognizes the character <PS> (\u2029) as terminating
    regular expression literals
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/ /
